--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon src/app.js -e js,hbs",
-    "start": "nodemon src/app.js"
+    "server": "node src/app.js -e js,hbs",
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
